syntax = "proto3";

package sharelib;

import "nameoption.proto";
import "error.proto";

option go_package = 'mtechnavi/sharelib/protobuf';

message FileFormat {
  // CSVの取込フォーマットの定義を選択
  //
  // 名称マスタにおける種別を参照
  // e.g.
  //   "A0000021" 管理場所取込フォーマット
  //   "A0000022" 取引先取込フォーマット
  //   "A0000023" 担当者取込フォーマット
  //   "A0000024" 項目取込フォーマット
  //   "A0000025" 図面取込フォーマット
  //   "A0000026" 見積依頼予定取込フォーマット
  //
  NameOption format = 1;

  // CSVにおけるヘッダ行の有無
  //
  // false  全行をデータとして読込する
  // true   １行目をヘッダ行として、２行目以降をデータ行として読込む
  //
  bool header = 2;

  // 列名を指定する
  repeated HeaderColumn header_columns = 6;

  // CSVにおける列を区切る文字種
  //
  // システムで定義された以下のいずれかを指定する:
  //    1. "COMMA"  区切り文字として "," を利用する
  //    2. "TAB" 区切り文字として "¥t" を利用する
  //
  string comma_name = 3;

  // CSVファイルの文字コード
  //
  // システムで定義された以下のいずれかを指定する:
  //    1. "UTF_8"  "UTF-8"にエンコーディングする
  //    2. "SHIFT_JIS" "Shift-JIS"にエンコーディングする
  //
  string encoding_name = 4;

  // 列のクォートを最小限にする
  //
  // false  全ての列をクォートで囲う
  // true   必要な場合のみクォートで囲う
  bool quote_minimally = 7;

  // CSVフォーマットの型
  // 例：mtechnavi.api.company.fileformat.ComponentUnitCsvFormatDefault
  string type_name = 5;
}

message HeaderColumn {
  // 辞書コード
  //
  // CSVフォーマットで指定されたheaderの値
  //
  string message_name = 1;
  // 列名
  //
  // 辞書コードをもとに項目名に変換した値を指定
  // 変換できなかった場合は空とする
  //
  string display_name = 2;
}

message ImportSummary {
  // 総件数
  int64 total = 1;
  // 正常件数
  int64 success = 2;
  // エラー件数
  int64 error = 3;
}

message ImportError {
  // 行番号
  // 行番号が特定できないエラーの場合0とする
  int32 row_number = 1;

  // 列番号
  // 列番号が特定できないエラーの場合0とする
  int32 column_number = 2;

  // エラー種別
  sharelib.ErrorLevel error_level = 3;

  // システムで定義されたメッセージコード
  //  コードはエラーメッセージ一覧 参照
  //
  string message_name = 4;

  // メッセージパラメータ
  repeated string message_arguments = 5;
}
